--- a/src/assets/styles/mixin.scss
+++ b/src/assets/styles/mixin.scss
@@ -85,6 +85,29 @@ $header-height: 80px;
   background-color: rgba(0, 0, 0, 0.1); /* 设置角落的背景颜色 */
 }
 
+.ant-table {
+  // scrollbar-color: auto;
+  scrollbar-color: rgba(0, 0, 0, 0.25) transparent !important;
+}
+.ant-table-body {
+  overflow: overlay;
+  scrollbar-color: auto;
+  &::-webkit-scrollbar {
+    background: rgba(0, 0, 0, 0);
+    height: 8px;
+    width: 8px;
+  }
+  &::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    background-color: #b2e6de33;
+  }
+  &::-webkit-scrollbar-track {
+    -webkit-box-shadow: 0;
+    border-radius: 0;
+    background-color: transparent;
+  }
+}
+
 .electronicFont {
   font-family: electronicFont;
 }
